test/error/E20.chigfn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"44096bb2-3276-47be-8286-df06a80fced5": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": "exec",
			"input": ["74d39334-d241-4dd5-932a-91716d5b2a83", 0],
			"output": ["44096bb2-3276-47be-8286-df06a80fced5", 0]
		}
	],
	"local_variables": {}
}
